2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>

	* debian/: Remove cruft (requested Anthony Fok.)

	* buildscripts/guile-gnome.sh: Build without gcc libtool version
	juggling.

	* scm/framework-gnome.scm: Cleanups.  Resurrect +/- canvas scaling.
	Add popup menu with grob properties.

	* lily/grob-scheme.cc (ly:grob-properties):
	(ly:grob-basic-properties): New function.

	* lily/stencil.cc (interpret_stencil_expression): Comment-out
	"no-origin" call.  Fixes -fps output.

	* scm/output-ps.scm (no-origin): Add dummy implementation.

	* scm/output-gnome.scm (define-origin): Remove
	(grob-cause): Add.

	* scm/output-ps.scm (scm):
	* scm/output-tex.scm (scm): Remove define-origin from exports list.
	(define-origin): Remove.

	* scm/output-gnome.scm (define-origin): 

	* scm/lily.scm (ly:all-output-backend-commands): Remove
	define-origin.  Add grob-cause.

2004-06-21  Heikki Junes   <hjunes@cc.hut.fi>

        * buildscripts/lilypond-words.py: add ly/portugues.ly.

2004-06-20  Heikki Junes   <hjunes@cc.hut.fi>
 
	* Documentation/user/GNUmakefile:
	* stepmake/stepmake/texinfo-rules: add Cascading Style Sheet using
	--include-css=.../texinfo.css; command includes css into the html.

	* Documentation/texinfo.css: add file.
	define <hr> as black and thin.            
 
2004-06-20  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* lily/stencil.cc (interpret_stencil_expression): add grob-cause
	stencil expression. Junk define-origin.

	* lily/my-lily-parser.cc (parse_string): init parser variable when
	lexer_ is set, ie. in parse_string and parse_file.

	* lily/book.cc (LY_DEFINE): new function. ly:make-book. Supercedes
	ly:score-bookify.

	* scm/lily.scm (collect-scores-for-book): new function.

	* ly/init.ly: print collected scores/musics.

	* lily/my-lily-parser.cc (LY_DEFINE): define parser in parser
	scope, not in lily module.

	* lily/book.cc (LY_DEFINE): ly:make-book. New function.

	* configure.in (PKG_CONFIG_PATH): add --enable-gui flag, and
	encapsulate gtk/pango tests.