@@ -1,3 +1,7 @@
+2004-06-22  Han-Wen Nienhuys   <hanwen@xs4all.nl>
+
+	* lily/stencil.cc (interpret_stencil_expression): bugfix 
+
 2004-06-21  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* debian/: Remove cruft (requested Anthony Fok.)
